@@ -13,6 +13,8 @@
 
   * Add remove and delete menu item in Olive. (#127392, Mateusz Korniak)
   
+  * Added "update" menu item in Olive. (Mateusz Korniak)
+  
   * New Olive application icon. (Simon Pascal Klein)
 
  UI
